@@ -6,7 +6,6 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -14,28 +13,34 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
+import org.springframework.stereotype.Component;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
+@Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
-    
+
     private static final Logger logger = LoggerFactory.getLogger(JwtAuthenticationFilter.class);
-    
-    @Autowired
-    private JwtUtils jwtUtils;
-    
-    @Autowired
-    private UserDetailsService userDetailsService;
-    
-    // 🔓 Rutas públicas que NO requieren JWT
-    private static final List<String> PUBLIC_PATHS = Arrays.asList(
+
+    private final JwtUtils jwtUtils;
+    private final UserDetailsService userDetailsService;
+
+    public JwtAuthenticationFilter(JwtUtils jwtUtils, UserDetailsService userDetailsService) {
+        this.jwtUtils = jwtUtils;
+        this.userDetailsService = userDetailsService;
+    }
+
+    // 🔓 Rutas públicas (SIN el prefijo de contexto /api)
+    private static final List<String> PUBLIC_PATHS = List.of(
+        // Auth
         "/auth/login",
-        "/auth/register", 
+        "/auth/register",
         "/auth/health",
         "/auth/validate-email",
         "/auth/validate-student-id",
+
+        // Places
         "/places",
         "/places/search",
         "/places/nearby",
@@ -43,70 +48,95 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         "/places/available",
         "/places/building",
         "/places/what3words",
+
+        // Routes
+        "/routes/destinations",
+        "/routes/to",              // p.ej. /routes/to/{dest}
+        "/routes/nearest",
+        "/routes/health",
+        "/routes/proposals/health",
+        "/routes/",                // para cubrir /routes/*/points y /routes/*/details
+
+        // Navigation & Users health
+        "/navigation/health",
+        "/users/health",
+
+        // General health
         "/health"
     );
-    
+
     @Override
     protected boolean shouldNotFilter(HttpServletRequest request) throws ServletException {
-        String requestPath = request.getRequestURI();
-        
-        // Remover el context path si existe
-        String contextPath = request.getContextPath();
-        if (StringUtils.hasText(contextPath) && requestPath.startsWith(contextPath)) {
-            requestPath = requestPath.substring(contextPath.length());
+        // Permitir preflight CORS
+        if ("OPTIONS".equalsIgnoreCase(request.getMethod())) {
+            logger.debug("⏭️ Skipping JWT filter for CORS preflight OPTIONS");
+            return true;
         }
-        
-        // 🔧 Variable final para usar en lambda
-        final String finalPath = requestPath;
-        
-        // Verificar si es una ruta pública
-        boolean isPublicPath = PUBLIC_PATHS.stream()
-            .anyMatch(publicPath -> finalPath.startsWith(publicPath) || finalPath.equals(publicPath));
-        
-        if (isPublicPath) {
-            logger.debug("⏭️ Skipping JWT filter for public path: {}", finalPath);
+
+        // Quitar context path (p.ej. /api) antes de comparar
+        String path = request.getRequestURI();      // e.g. /api/auth/health
+        String ctx  = request.getContextPath();     // e.g. /api
+        if (StringUtils.hasText(ctx) && path.startsWith(ctx)) {
+            path = path.substring(ctx.length());    // e.g. /auth/health
         }
-        
-        return isPublicPath;
+
+        final String normalized = path;
+
+        boolean isPublic = PUBLIC_PATHS.stream().anyMatch(publicPath ->
+            normalized.equals(publicPath) || normalized.startsWith(publicPath)
+        );
+
+        if (isPublic) {
+            logger.debug("⏭️ Skipping JWT filter for public path: {}", normalized);
+        }
+        return isPublic;
     }
-    
+
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response,
-                                    FilterChain filterChain) throws ServletException, IOException {
-        
+    protected void doFilterInternal(
+            HttpServletRequest request,
+            HttpServletResponse response,
+            FilterChain filterChain
+    ) throws ServletException, IOException {
+
         logger.debug("🔐 Processing JWT for path: {}", request.getRequestURI());
-        
+
         try {
-            String jwt = parseJwt(request);
-            if (jwt != null && jwtUtils.validateJwtToken(jwt)) {
-                String username = jwtUtils.getUserNameFromJwtToken(jwt);
-                
-                UserDetails userDetails = userDetailsService.loadUserByUsername(username);
-                
-                UsernamePasswordAuthenticationToken authentication =
-                        new UsernamePasswordAuthenticationToken(userDetails, null,
-                                userDetails.getAuthorities());
-                authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-                
-                SecurityContextHolder.getContext().setAuthentication(authentication);
-                logger.debug("✅ User authenticated: {}", username);
-            } else {
-                logger.debug("❌ No valid JWT token found");
+            // Si ya hay autenticación establecida, continúa
+            if (SecurityContextHolder.getContext().getAuthentication() == null) {
+                String jwt = parseJwt(request);
+                if (jwt != null && jwtUtils.validateJwtToken(jwt)) {
+                    String username = jwtUtils.getUserNameFromJwtToken(jwt);
+
+                    UserDetails userDetails = userDetailsService.loadUserByUsername(username);
+
+                    UsernamePasswordAuthenticationToken authentication =
+                            new UsernamePasswordAuthenticationToken(
+                                    userDetails,
+                                    null,
+                                    userDetails.getAuthorities()
+                            );
+
+                    authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+                    SecurityContextHolder.getContext().setAuthentication(authentication);
+
+                    logger.debug("✅ User authenticated: {}", username);
+                } else {
+                    logger.debug("❌ No valid JWT token found");
+                }
             }
         } catch (Exception e) {
             logger.error("Cannot set user authentication: {}", e.getMessage());
         }
-        
+
         filterChain.doFilter(request, response);
     }
-    
+
     private String parseJwt(HttpServletRequest request) {
         String headerAuth = request.getHeader("Authorization");
-        
         if (StringUtils.hasText(headerAuth) && headerAuth.startsWith("Bearer ")) {
             return headerAuth.substring(7);
         }
-        
         return null;
     }
 }
